# CV-Pro

COMP5523_Project2/: CMakeLists.txt
COMP5523_Project2/src/: filter_image.cpp  process_image.cpp  resize_image.cpp
COMP5523_Project2_CPP_student_use/: clean.sh
COMP5523_Project2_CPP_student_use/src/: filter_image.cpp  image.h  resize_image.cpp
COMP5523_Project2_CPP_student_use/src/test/: test_case.cpp
COMP5532-Project1/: CMakeLists.txt  test0  test_case
COMP5532-Project1/src/: access_image.cpp  process_image.cpp
COMP5532-Project1/src/test/: test0.cpp  test_case.cpp
COMP5532-Project2/COMP5523-Project2-Python/: filter_image.py  resize_image.py
COMP5532-Project3/: fashion_mnist.py  train.py
